--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "m11-demo-webapp",
-  "version": "0.1.0",
+  "name": "@technogi/m11-demo-webapp",
+  "version": "0.2.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -34,5 +34,13 @@
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Technogi/m11n-demo-webapp"
+  },
+  "author": {
+    "email": "carlos@technogi.com.mx",
+    "name": "Carlos"
   }
 }
