--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.3.7",
-    "@devexpress/dx-react-chart": "^4.0.3",
-    "@devexpress/dx-react-chart-material-ui": "^4.0.3",
-    "@devexpress/dx-react-core": "^4.0.3",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
@@ -32,6 +29,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "recharts": "^2.4.1",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
   },
